aboutt page done!

--- a/about.html
+++ b/about.html
@@ -62,104 +62,70 @@
               /></svg
           ></label>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="pricing.html">Pricing </a></li>
-          <li><a href="process.html">Process</a></li>
-          <li><a href="works.html">Projects</a></li>
+          <li><a href="works.html">Our Work</a></li>
         </ul>
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>Contact Us</button></a>
+          <a href="contact.html"><button>free consultation!</button></a>
         </div>
       </div>
     </div>
     <div id="main">
       <div id="about-page" class="container">
-        <div id="about-page--header">
-          <h1 class="section-common--heading">About rumidevelops</h1>
-          <h3>
-            <b>Welcome to rumidevelops!</b> We're not just a web development
-            agency; we're your partners in digital success. At rumidevelops,
-            we're driven by a passion for creating extraordinary websites that
-            don't just look stunning but also deliver remarkable results.
-          </h3>
-          <h3>
-            Our mission? To empower businesses like yours to thrive in the
-            ever-evolving digital landscape. With our unique blend of
-            creativity, technical expertise, and cutting-edge A.I technology, we
-            transform your ideas into a powerful online presence that captivates
-            your audience and drives tangible growth.
-          </h3>
-        </div>
-        <div id="about-page--why">
-          <h1 class="section-common--heading">Why choose rumidevelops?</h1>
-          <div id="about-why--div">
-            <div class="about-why--item">
-              <h2 class="section-common--subheading">Personalized Approach:</h2>
-              <p>
-                As your dedicated full-stack web developer, we take the time to
-                truly understand your business, goals, and audience. We believe
-                that understanding your unique challenges and aspirations is the
-                key to creating customized web solutions that not only look
-                great but also resonate with your target audience.
-              </p>
-            </div>
-            <div class="about-why--item">
-              <h2 class="section-common--subheading">Innovative Solutions:</h2>
-              <p>
-                We're always at the forefront of technology and innovation. By
-                leveraging the latest trends and A.I capabilities, we ensure
-                that your website is not just up-to-date but also ahead of the
-                curve, offering a seamless user experience that keeps visitors
-                coming back for more.
-              </p>
-            </div>
-            <div class="about-why--item">
-              <h2 class="section-common--subheading">
-                Commitment to Excellence:
-              </h2>
-              <p>
-                Quality is at the heart of everything we do. From the initial
-                consultation to the final launch and beyond, we strive for
-                excellence in every aspect of our work. Our attention to detail,
-                rigorous testing, and ongoing support ensure that your website
-                is of the highest standard and performs flawlessly.
-              </p>
-            </div>
-            <div class="about-why--item">
-              <h2 class="section-common--subheading">
-                Building Relationships:
-              </h2>
-              <p>
-                We believe in the power of collaboration and long-lasting
-                partnerships. At rumidevelops, you're not just another client;
-                you're part of our extended family. We're committed to building
-                strong, trusting relationships with our clients, providing
-                personalized support, and celebrating your successes every step
-                of the way.
-              </p>
-            </div>
+        <div id="about-intro">
+          <div id="about-intro--1">
+            <h1>Hi!👋 I'm Hassaan Rumi, the founder of Rumidevelops.</h1>
+            <h3>
+              In early 2023, I started selling my services online but faced
+              challenges with low sales and few clients. I realized "the problem
+              was my website", which wasn't converting visitors into buyers.
+              <br />
+              After reading numerous books on marketing and sales, I developed a
+              brand website script that now brings in more sales than I could
+              have imagined. This experience inspired me to help other small
+              businesses overcome similar challenges.
+            </h3>
+          </div>
+          <div id="about-intro--2">
+            <img src="images/profile1.webp" alt="me" />
           </div>
         </div>
-        <div id="about-page--footer">
-          <h2 class="section-common--heading">Unlock Your Online Potential</h2>
+        <div id="about-mission">
+          <h1>Our Mission</h1>
           <h4>
-            So, are you ready to take your digital presence to the next level?
-            Let's collaborate to turn your digital dreams into reality and
-            unlock new opportunities for your business. Whether you're looking
-            to launch a new website, revamp an existing one, or explore new
-            digital avenues, rumidevelops is here to make it happen.
+            At Rumidevelops, we believe that growing a business online should be
+            simple. Every small business should have the opportunity to thrive.
+            Our mission is to help small Pakistani businesses market their
+            products and services with a clear message and build effective brand
+            websites.
           </h4>
+        </div>
+        <div id="about-work">
+          <h1>To make that mission possible we</h1>
           <h4>
-            <b>Join us on this exciting journey</b> and let's create something
-            extraordinary together. Together, we'll build a website that not
-            only looks amazing but also drives growth, engages your audience,
-            and sets you apart from the competition.
+            offer a unique "words first" approach. Unlike other agencies, we
+            start by discussing your business in detail and then create the best
+            content for your site. This ensures your website not only looks
+            great but also converts visitors into customers.
           </h4>
+        </div>
+        <div id="about-why">
+          <h1>Why Choose us?</h1>
+          <h4>
+            Our personalized approach and dedication to understanding your
+            business make us different. We work tirelessly to ensure your
+            website drives results and helps your business grow. Join us and see
+            the difference we can make.
+          </h4>
+        </div>
+        <div id="about-cta">
           <div id="contactBtn">
-            <a href="contact.html"><button>Get Started</button></a>
+            <a href="contact.html"
+              ><button>Create your brand website now!</button></a
+            >
           </div>
         </div>
       </div>
