--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Transform your business into a well-recognized brand name and outstand the market, with our brand website development. Book your free consultation call now!"
+      content="rumidevelops | Transform your business into a well-recognized brand name and outstand the market, with our brand website development. Book your free consultation call now!"
     />
     <meta
       name="keywords"
@@ -280,29 +280,45 @@
             About <span>rumidevelops</span>
           </h1>
           <h3>
-            Welcome to rumidevelops,<span>
-              where innovation meets excellence</span
-            >. We're on a mission to transform your digital vision into reality
-            with bespoke websites powered by cutting-edge A.I technology.
+            Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of rumidevelops.
           </h3>
 
           <h3>
-            As your dedicated <span>full-stack web developer</span>, we bring a
-            blend of creativity and expertise to every project, crafting
-            personalized web solutions that resonate and deliver results.
+            So, in early 2023, I started selling my services online. But got
+            frustrated in a few weeks because of not getting sales and clients.
+            I understood where <span>the problem</span> was, my website was not
+            good at converting visitors into buyers.
           </h3>
 
           <h3>
-            At rumidevelops, we believe in the power of collaboration and
-            commitment to excellence. Let's partner together to unlock your
-            business's full potential and achieve remarkable online success.
+            So, after reading tens of books on marketing and sales, I created
+            the <span>brand website script</span> which now helps me get more
+            sales than i could possibly handle!
           </h3>
-          <div id="contactBtn">
-            <a href="about.html"><button>Discover more...</button></a>
+          <h3>
+            I feel that growing a business online should not be difficult and
+            every small business should have the opportunities to grow. That's
+            why at rumidevelops, we help you market your products/services in a
+            clear message and build your brand website. So that you don't feel
+            frustrated about getting sales anymore and focus on building your
+            product/service.
+          </h3>
+          <h2>
+            Join us in our mission to help small Pakistani businesses like
+            yours, sell more!
+          </h2>
+          <div id="call-to--actions">
+            <div id="contactBtn">
+              <a href="about.html"><button>Discover more...</button></a>
+            </div>
+            <div id="contactBtn">
+              <a href="https://www.instagram.com/hassaan_rumi/"
+                ><button>Follow me</button></a
+              >
+            </div>
           </div>
         </div>
       </div>
-
       <div id="faq" class="container">
         <h1>Frequently Asked Questions ( FAQ'S ):</h1>
 
@@ -387,11 +403,12 @@
               agencies?
             </div>
             <div class="faq-answer" id="answer7">
-              At rumidevelops, we combine creativity, expertise, and
-              cutting-edge A.I technology to deliver innovative and effective
-              web solutions. Our commitment to excellence, 24/7 customer
-              support, and personalized approach set us apart from the
-              competition.
+              Most web agencies ask their clients to provide content for the
+              website, which can be the hardest part of creating a brand
+              website. We do things differently. We first discuss your business
+              in detail and then create the best content for your website. This
+              ensures your site not only looks great but also converts visitors
+              into customers.
             </div>
             <i class="faq-arrow fas fa-chevron-down"></i>
           </div>
