pricing page done!

--- a/about.html
+++ b/about.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get more sales with our brand websites or receive a full refund. We offer a 100% money-back guarantee. Our unique approach includes writing the words for your website, helping you stand out and become a recognized brand."
+    />
+    <meta
+      name="keywords"
+      content="rumidevelops, Animated modern website, growing business online!, Outstanding brand website"
+    />
+    <meta name="robots" content="about, follow" />
     <title>RUMIDEVELOPS - ABOUT</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -69,7 +78,7 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>free consultation!</button></a>
+          <a href="contact.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
@@ -124,7 +133,9 @@
         <div id="about-cta">
           <div id="contactBtn">
             <a href="contact.html"
-              ><button>Create your brand website now!</button></a
+              ><button>
+                claim your free 30-minute strategy session now!
+              </button></a
             >
           </div>
         </div>
