--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="rumidevelops | Transform your business into a well-recognized brand name and outstand the market, with our brand website development. Book your free consultation call now!"
+      content="Get more sales with our brand websites or receive a full refund. We offer a 100% money-back guarantee. Our unique approach includes writing the words for your website, helping you stand out and become a recognized brand."
     />
     <meta
       name="keywords"
@@ -76,29 +76,32 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>free consultation!</button></a>
+          <a href="contact.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
     <div id="main">
       <div id="home">
         <div id="home-part--1">
-          <h1>WE HELP SMALL BUSINESSES TO <span> GROW ONLINE!</span></h1>
+          <h1>WE CREATE BRAND WEBSITES FOR <span>SMALL BUSINESSES.</span></h1>
           <h3>
             We understand that growing a business is
             <span class="internal-problem">hard</span> and competing with the
             big dawgs of the market is a
             <span class="internal-problem">headache</span>. We will create your
             <span> brand website </span> and enhance your marketing material,
-            offering solutions that will help you increase your market share and
-            assist you in
+            offering solutions that will help you in
             <span>transforming your business into a well-recognized brand</span>
             while
-            <a href="contact.html">skyrocketing your sales by up to 200%</a>.
+            <span>skyrocketing your sales by up to 200%</span>. <br /><br />
+            Plus, with our <a href="pricing.html">100% money-back guarantee</a>,
+            if you don't see the results you want, we'll fully refund you.
+            Invest in your success with confidence and let us help you dominate
+            the market!
           </h3>
           <div id="contactBtn">
             <a href="contact.html"
-              ><button>book your free consultation now!</button></a
+              ><button>claim your free strategy session now!</button></a
             >
           </div>
         </div>
@@ -148,7 +151,7 @@
 
         <div id="contactBtn">
           <a href="contact.html"
-            ><button>get your brand website now!</button></a
+            ><button>claim your free strategy session now!</button></a
           >
         </div>
       </div>
@@ -217,7 +220,7 @@
           </div>
           <div id="sales-growth--btn">
             <a href="contact.html"
-              ><button>Get Your Brand website now!</button></a
+              ><button>claim your free strategy session now!</button></a
             >
           </div>
         </div>
@@ -262,7 +265,7 @@
         </div>
         <div id="contactBtn">
           <a href="contact.html"
-            ><button>book your free consultation now!</button></a
+            ><button>claim your free strategy session now!</button></a
           >
         </div>
       </div>
