--- a/works.html
+++ b/works.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get more sales with our brand websites or receive a full refund. We offer a 100% money-back guarantee. Our unique approach includes writing the words for your website, helping you stand out and become a recognized brand."
+    />
+    <meta
+      name="keywords"
+      content="rumidevelops, Animated modern website, growing business online!, Outstanding brand website"
+    />
+    <meta name="robots" content="works, follow" />
     <title>RUMIDEVELOPS - WORKS</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -50,16 +59,14 @@
               /></svg
           ></label>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="pricing.html">Pricing </a></li>
-          <li><a href="process.html">Process</a></li>
-          <li><a href="works.html">Projects</a></li>
+          <li><a href="works.html">Our Work</a></li>
         </ul>
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>Contact Us</button></a>
+          <a href="contact.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
