call-to-actions added

--- a/about.html
+++ b/about.html
@@ -126,17 +126,24 @@
           <h4>
             Our personalized approach and dedication to understanding your
             business make us different. We work tirelessly to ensure your
-            website drives results and helps your business grow. Join us and see
-            the difference we can make.
+            website drives results and helps your business grow. Apart from that
+            we offer <a href="pricing.html">100% moneey back guarantee!</a>
+            <br />
+            Join us and see the difference we can make.
           </h4>
         </div>
-        <div id="about-cta">
+        <div id="cta-div">
           <div id="contactBtn">
             <a href="contact.html"
               ><button>
                 claim your free 30-minute strategy session now!
               </button></a
             >
+          </div>
+          <div id="pricingBtn">
+            <a href="pricing.html">
+              <button>see our pricing</button>
+            </a>
           </div>
         </div>
       </div>
