--- a/index.html
+++ b/index.html
@@ -148,11 +148,17 @@
             <img src="images/frustrated-man.avif" alt="" />
           </div>
         </div>
-
-        <div id="contactBtn">
-          <a href="contact.html"
-            ><button>claim your free strategy session now!</button></a
-          >
+        <div id="cta-div">
+          <div id="contactBtn">
+            <a href="contact.html"
+              ><button>claim your free strategy session now!</button></a
+            >
+          </div>
+          <div id="pricingBtn">
+            <a href="pricing.html">
+              <button>see our pricing</button>
+            </a>
+          </div>
         </div>
       </div>
       <div id="sales-growth--container">
@@ -218,10 +224,18 @@
               </p>
             </div>
           </div>
-          <div id="sales-growth--btn">
-            <a href="contact.html"
-              ><button>claim your free strategy session now!</button></a
-            >
+          <div id="cta-div">
+            <div id="sales-growth--btn">
+              <a href="contact.html"
+                ><button>claim your free strategy session now!</button></a
+              >
+            </div>
+
+            <div id="sales-growth--btn">
+              <a href="pricing.html">
+                <button>see our pricing</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -263,10 +277,17 @@
             <i class="fa-solid fa-code"></i>
           </div>
         </div>
-        <div id="contactBtn">
-          <a href="contact.html"
-            ><button>claim your free strategy session now!</button></a
-          >
+        <div id="cta-div">
+          <div id="contactBtn">
+            <a href="contact.html"
+              ><button>claim your free strategy session now!</button></a
+            >
+          </div>
+          <div id="pricingBtn">
+            <a href="pricing.html">
+              <button>see our pricing</button>
+            </a>
+          </div>
         </div>
       </div>
       <div id="about-us" class="container">
