--- a/index.html
+++ b/index.html
@@ -118,30 +118,80 @@
         <div id="problems-div">
           <div id="problems-part--1">
             <p>
-              As owners, we all <span>love our business</span>. But did you
-              know?
+              Let me guess, you are looking for new ways to get more clients and
+              a way to beat your competition?
+            </p>
+            <br />
+            <p>
+              And, you are thinking that "I would get more customers only if I
+              could get more traffic/visitors to my site and more eye balls on
+              my offer."
             </p>
             <p>
-              An outdated website can <span class="danger">hurt</span> your
-              business. You may lose potential customers to competitors with
-              better websites. A poor online presence can damage your reputation
-              and frustrate visitors. Without a strong brand website, your
-              business may struggle to get noticed.
+              But here's the truth, most people don't have a traffic problem.
             </p>
-            <br /><br />
+            <br />
+            <p>They have a <span>"conversion problem"</span>.</p>
+            <p>You see, there is no shortage of traffic online.</p>
+            <p>There are literally 1.8 billion active users on facebook.</p>
+            <p>And you can buy as much traffic as you want.</p>
+            <br />
+            <p>So, "where's the problem?"</p>
+            <p>ok let's go.</p>
+            <p>here's the problem:</p>
+            <br />
             <p>
-              Missing out on a great brand website means missed opportunities
-              and limited growth. Customers might choose competitors, leading to
-              lower sales. Delaying updates makes it harder to rebuild your
-              brand's credibility. You need a brand website which looks good and
+              The problem is the rate at which your <span>CONVERT</span> that
+              traffic into leads,sales or customers.
+            </p>
+            <br />
+            <p>But where there is a problem, there is always a solution.</p>
+            <p>here's the solution:</p>
+            <br />
+            <p>
+              You need a <span>super sales person</span>, who works day and
+              night, 24/7 to bring in leads/sales/customers.
+            </p>
+            <br />
+            <p>
+              This person is far more cheaper and effective than any other
+              marketing.
+            </p>
+            <br />
+            <p>And... this person is known as: <span>"Brand Website!"</span></p>
+            <p>
+              All you need is a <span>Brand Website</span> which looks good and
               converts <span>visitors into buyers!</span>
             </p>
+            <br />
+            <p>
+              And you just have to pay this
+              <span>super sales person</span> once! And
+              <span
+                >"It will do the work of getting you more and more sales day and
+                night for free afterwards!"</span
+              >
+            </p>
+            <br />
+            <p>
+              And now, I will give you an offer that you
+              <span class="danger">"can't refuse!"</span>
+            </p>
+            <p>here it is...</p>
+            <br /><br />
+            <h3>
+              "WE GUARANTEE TO BOOST YOUR SALES BY TURNING YOUR WEBSITE VISITORS
+              INTO YOUR DREAM CUSTOMERS, OR YOU DON'T PAY US A SINGLE RUPEE!"
+            </h3>
+            <p>Excited to see what's in the offer?</p>
+            <p>go <a href="pricing.html">here! ,and see by yourself.</a></p>
             <br /><br />
             <p>
-              Get a top-notch brand website that sets you apart. Capture more
-              leads, build your brand, and grow your market share. Enjoy peace
-              of mind and never again frustrate over getting more sales with an
-              optimized brand website that drives success and boosts sales.
+              Get a top-notch <span>"Brand Website"</span> that sets you apart.
+              Capture more leads, build your brand, and grow your market share.
+              Enjoy peace of mind and never again frustrate over getting more
+              sales with an optimized brand website that drives success and
+              boosts sales.
             </p>
           </div>
           <div id="problems-part--2">
@@ -225,13 +275,13 @@
             </div>
           </div>
           <div id="cta-div">
-            <div id="sales-growth--btn">
+            <div id="contactBtn">
               <a href="contact.html"
                 ><button>claim your free strategy session now!</button></a
               >
             </div>
 
-            <div id="sales-growth--btn">
+            <div id="pricingBtn">
               <a href="pricing.html">
                 <button>see our pricing</button>
               </a>
