--- a/about.html
+++ b/about.html
@@ -91,11 +91,11 @@
               In early 2023, I started selling my services online but faced
               challenges with low sales and few clients. I realized "the problem
               was my website", which wasn't converting visitors into buyers.
-              <br />
-              After reading numerous books on marketing and sales, I developed a
-              brand website script that now brings in more sales than I could
-              have imagined. This experience inspired me to help other small
-              businesses overcome similar challenges.
+              <br /><br />
+              After reading numerous books on marketing and sales, I developed
+              the "brand website script" that now brings in more sales than I
+              could have imagined. <br />This experience inspired me to help
+              other small businesses overcome similar challenges.
             </h3>
           </div>
           <div id="about-intro--2">
@@ -107,6 +107,7 @@
           <h4>
             At Rumidevelops, we believe that growing a business online should be
             simple. Every small business should have the opportunity to thrive.
+            <br />
             Our mission is to help small Pakistani businesses market their
             products and services with a clear message and build effective brand
             websites.
@@ -115,19 +116,21 @@
         <div id="about-work">
           <h1>To make that mission possible we</h1>
           <h4>
-            offer a unique "words first" approach. Unlike other agencies, we
-            start by discussing your business in detail and then create the best
-            content for your site. This ensures your website not only looks
-            great but also converts visitors into customers.
+            offer a unique "words first" approach. <br />
+            Unlike other agencies, we start by discussing your business in
+            detail and then create the best content for your site. <br />
+            This ensures your website not only looks great but also converts
+            visitors into customers.
           </h4>
         </div>
         <div id="about-why">
           <h1>Why Choose us?</h1>
           <h4>
             Our personalized approach and dedication to understanding your
-            business make us different. We work tirelessly to ensure your
-            website drives results and helps your business grow. Apart from that
-            we offer <a href="pricing.html">100% money back guarantee!</a>
+            business make us different. <br />
+            We work tirelessly to ensure your website drives results and helps
+            your business grow. <br />Apart from that we offer
+            <a href="pricing.html">100% money back guarantee!</a>
             <br />
             Join us and see the difference we can make.
           </h4>
