--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <p>here's the problem:</p>
             <br />
             <p>
-              The problem is the rate at which your <span>CONVERT</span> that
+              The problem is the rate at which you <span>CONVERT</span> that
               traffic into leads,sales or customers.
             </p>
             <br />
@@ -297,8 +297,8 @@
             <h2>We help you plan your website</h2>
             <p>
               Once you hop on a free consultation call with us, we'll question
-              you everything about your business and then give you the plan and
-              price of your brand website and also help you to market your
+              you everything about your business and then give a customized plan
+              and price of your brand website and also help you to market your
               business in an efficient way.
             </p>
             <i class="fa-solid fa-phone"></i>
@@ -322,7 +322,7 @@
               After writing the words that sell, we will then design your brand
               website and if you like the design then we will develop it. We
               will test that everything is working fine and also do SEO for your
-              website and then host it for you (for free as a compliment!).
+              website and then host it for you.
             </p>
             <i class="fa-solid fa-code"></i>
           </div>
@@ -360,8 +360,8 @@
           <h3>
             So, in early 2023, I started selling my services online. But got
             frustrated in a few weeks because of not getting sales and clients.
-            I understood where <span>the problem</span> was, my website was not
-            good at converting visitors into buyers.
+            I understood where <span>the problem</span> was, "my website was not
+            good at converting visitors into buyers."
           </h3>
 
           <h3>
