--- a/pricing.html
+++ b/pricing.html
@@ -285,9 +285,9 @@
               <h2>We help you plan your website</h2>
               <p>
                 Once you hop on a free consultation call with us, we'll question
-                you everything about your business and then give you the plan
-                and price of your brand website and also help you to market your
-                business in an efficient way.
+                you everything about your business and then give you a
+                customized plan and price of your brand website and also help
+                you to market your business in an efficient way.
               </p>
               <i class="fa-solid fa-phone"></i>
             </div>
@@ -310,8 +310,7 @@
                 After writing the words that sell, we will then design your
                 brand website and if you like the design then we will develop
                 it. We will test that everything is working fine and also do SEO
-                for your website and then host it for you (for free as a
-                compliment!).
+                for your website and then host it for you.
               </p>
               <i class="fa-solid fa-code"></i>
             </div>
