--- a/pricing.html
+++ b/pricing.html
@@ -400,7 +400,8 @@
           </h4>
           <br />
           <h3>
-            Plus, if you book this strategy session now we'll also send you:
+            Plus, if you book this strategy session now we'll also send you our
+            e-book:
           </h3>
           <br />
           <h2>
